Integração mysql e migration

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings":
+  {
+    "conexaoMysql": "Server=localhost;Port=3306;Database=MyBdMininal_api;Uid=root;Pwd=Teste@123;"  
   }
 }
