Validando login e senha adm

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings":
   {
-    "conexaoMysql": "Server=localhost;Port=3306;Database=MyBdMininal_api;Uid=root;Pwd=Teste@123;"    
+    "conexaoMysql": "Server=localhost;Port=3306;Database=MyBdMininal_api;Uid=root;Pwd=teste123;"    
   }
 }
